Release Notes
=============
==== Post Jena 2.4

Model
    o Model has acquired a new method isClosed(), true iff the model has
      been .close()d
      
    o Graph ditto
    
    o The built-in Graph and Model implementations have been modified to 
      implement this method.
      
OntModel
    o the prefix mapping of an OntModel will not offer as a default URI
      the default URI of any non-base component.
      
    o this change is implemented via Polyadic and hence any MultiUnion
      will have this behaviour.

Reasoners
   o fixed bug in duplicate removal in GenericRuleReasoner in pure backward mode
   o fixed bug in parsing of typed literals to handle user defined prefixes
     (thanks to Steve Crane for the fix)
   o removed MAX_VARS limit from the old forward rule engine
   
==== Jena 2.4

JAR file changes:
    Added:    wstx-asl-2.8.jar
              json.jar
              iri.jar
    Removed:  stax-1.1.1-dev.jar
              jakarta-oro-2.0.8.jar
              

N3/Turtle:
    o The syntax form 2.3 is now treated as an XSD decimal, not an XSD double
      This is inline with chnages to N3 and Turtle specifications and 
      compatible with SPARQL.

General
    o Fixed various security violations which prevent use within Applets

Model
    o Model[Con] has acquired a new method, remove(S, P, O),
	  which removes the triple (S, P, O) from the model. None
	  of S, P, O can be null. O is of type RDFNode (no overloading
	  for primitive types etc).

ExtendedIterator [hence NiceIterator and ResultSetIterator]
    o added toSet() and toList(), which bundle the [remaining]
      elements of the iterator up as a Set or List. Testing
      these is a bit tricky; for the moment I've cheated by
      testing specific instacnes of WrappedIterator, which is
      built on NiceIterator, and NiceIterator is the base class
      for /almost/ all the ExtendedIterators in the system,
      except ResultSetIterator for which I added special code.

Node