@@ -1,11 +1,12 @@
 /*
 	(c) Copyright 2003, 2004, 2005, 2006 Hewlett-Packard Development Company, LP
 	[see end of file]
-	$Id: TestStatements.java,v 1.15 2006-03-22 13:53:24 andy_seaborne Exp $
+	$Id: TestStatements.java,v 1.16 2006-07-18 14:08:33 chris-dollin Exp $
 */
 
 package com.hp.hpl.jena.rdf.model.test;
 
+import com.hp.hpl.jena.datatypes.xsd.impl.XMLLiteralType;
 import com.hp.hpl.jena.graph.FrontsTriple;
 import com.hp.hpl.jena.rdf.model.*;
 import junit.framework.*;
@@ -112,6 +113,14 @@ public class TestStatements extends ModelTestBase
         Statement st = m.createStatement( S, P, O );
         assertTrue( st.toString().indexOf( fakeURI ) > 0 );  
         }
+    
+    public void testHasWellFormedXML()
+        {
+        assertFalse( statement( "s P 1" ).hasWellFormedXML() );
+        assertFalse( statement( "S P '<x>/x>'rdf:XMLLiteral" ).hasWellFormedXML() );
+        assertTrue( statement( "S P '<x></x>'rdf:XMLLiteral" ).hasWellFormedXML() );
+        }
+    
     }
 
 /*
