@@ -2,6 +2,11 @@ Release Notes
 =============
 ==== Post Jena 2.4
 
+Statement
+    o the method getWellFormed has been deprecated in favour of a new
+      method hasWellFormedXML(), paralleling Literal's newish 
+      isWellFormedXML().
+
 Model
     o Model has acquired a new method isClosed(), true iff the model has
       been .close()d
